cmake_minimum_required(VERSION 3.28)
project(final_sem)

set(CMAKE_CXX_STANDARD 17)

add_executable(final_sem cls_and_obj.cpp
        access_specifiers.cpp
        manipulators.cpp
        string_input.cpp
        string_input_oop.cpp
        string_manipualtors.cpp
        2d_array_io.cpp
        matrix_addition.cpp
        func_overloading_dpt.cpp
        func_overloading_dnp.cpp
        inline_func.cpp
        friend_func.cpp
        friend_cls.cpp
        constructor.cpp
        destructor.cpp
        friendfunc_cons_des.cpp
        friendcls_friendfunc_cons_des.cpp
        single_inherit.cpp
        multiple_inherit.cpp
        multilevel_inherit.cpp
        hierarchichal_inherit.cpp
        hybrid_inherit.cpp
        virtual_func.cpp
        operator_overload.cpp
        pointer_arith.cpp
        aop_to_v.cpp
        aop_to_s.cpp
        memory_alloc.cpp
        function_template.cpp
        class_template.cpp
        exception_handling.cpp
        PYQs/fibonacci.cpp
        PYQs/size_of_data_types.cpp
        PYQs/array_diff.cpp
        PYQs/reverse_arr_add.cpp
        PYQs/swap_values_every_way.cpp
        PYQs/stack_implementation.cpp
        PYQs/SRO_friend_func.cpp
        PYQs/constructor_destructor.cpp
        PYQs/const_dest_inherit.cpp
        PYQs/virtual_and_pure_virtual.cpp
        PYQs/overlaoding_operator.cpp
        PYQs/access_specifiers.cpp
        PYQs/pointer_dma_array.cpp
        PYQs/function_template.cpp
        PYQs/file_handling.cpp
        PYQs/pair_finder.cpp
        PYQs/remove_spaces.cpp
        PYQs/multiply_list_&_matrices.cpp
        PYQs/overload_copy_strings.cpp
        PYQs/overload_concat_strings.cpp
        PYQs/dynamic_alloc_strings.cpp
        PYQs/prime.cpp
        PYQs/range_of_data_types.cpp
        PYQs/linear_&_binary_search.cpp
        PYQs/overload_largest.cpp
        PYQs/PTA_&_AOP.cpp
        PYQs/sum_of_prime_in_array.cpp
        PYQs/missing_digits.cpp
        PYQs/count_no_of_digits.cpp
        PYQs/sort_list.cpp)
